internet-gateway.tf
resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    "Name" = "Test Kauan IGW"
  }
}
